# yt-dlp-gui

./: CMakeLists.txt  main.cpp  resource.h  youtube-dl-gui.sln  yt-dlp-gui.sln
.github/workflows/: build.yml  deep.yml  gpt.yml  opus.yml  qwen.yml  release.yml
res/: app.manifest  app.rc
src/: app.rc  main.cpp  resource.h  settings.cpp  settings.h
youtube-dl-gui/: youtube-dl-gui.csproj
yt-dlp-gui/: MainForm.cpp  MainForm.h  Program.cpp  Settings.cpp  Settings.h  yt-dlp-gui.vcxproj
